# walls_funs

./: LICENSE
setwall-ext/: get_by_link.js  getwall.js  manifest.json  popup.html
setwall-runs/: Cargo.toml  config.json  config.toml
setwall-runs/src/: main.rs  settings.rs  wall_from_clipboard.rs
setwall-runs/src/wall_fetcher/: any_image_url.rs  any_url.rs  downloader.rs  mod.rs  wallhaven.rs
