[package]
name = "setwall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-clipboard = "0.4.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
websocket = "0.26.5"
tinyjson = "2.5.1"

[[bin]]
name = "setclipw"
path = "src/wall_from_clipboard.rs"
