[package]
name = "setwall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
cli-clipboard = "0.4.0"
getset = "0.1.2"
paste = "1.0.15"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
resolve-path = "0.1.0"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.62"
toml = "0.8.14"
websocket = "0.27.1"

[[bin]]
name = "setclipw"
path = "src/wall_from_clipboard.rs"
